--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ ul li::before{
     height: 28px;
     width: 28px;
     border-radius: 50%;
-    background-image: url(assets/unchecked.png);
+    background-image: url(unchecked.png);
     background-size: cover;
     background-position: center;
     top:12px;
@@ -84,7 +84,7 @@ color: #555;
 text-decoration: line-through;
 }
 ul li.checked::before{
-    background-image: url(assets/checked.png);
+    background-image: url(checked.png);
 }
 ul li span{
     position: absolute;
